src/views/components/set-user-info/set-user-info.scss
@import 'views/styles/shared';

.set-user-info {
  margin-bottom: 1em;
  font-size: 0.9em;

  .flex-rows-break {
    padding: 0.5em 0;
  }
  .modal-header {
    display: block;
    padding: 1em 1em 0 1em;
  }

  .modal-body {

    .modal-form {
      display: flex;
      flex-wrap: wrap;
      flex-direction: column;
    }

    .ck-editor {
      flex-basis: 100%;
      max-width: 100%;
    }

    .avatar-wrapper {
      display: flex;
      min-width: 115px;
      min-height: 115px;

      .avatar {
        -webkit-border-radius: 140px;
        -moz-border-radius: 140px;
        border-radius: 140px;
        margin: 0;
        max-width: 115px;
        max-height: 115px;
        cursor: pointer;
      }

      .avatar-left {
        margin-right: 10px;
      }

      .avatar-right {
        margin-left: 10px;
      }
    }

    .avatar-parallel {
      display: flex;
      flex-wrap: wrap;
    }

    padding: 1.5em;
  }

  .rich-text-editor {
    width: 100%;
  }

  .submit-wrapper {
    margin-top: 2em;
    text-align: center;

    .button {
      font-size: 1em;
      background-color: #eb1478;
      color: white;
      padding: 0 6em;
      height: 3em;
      -webkit-border-radius: 8px;
      -moz-border-radius: 8px;
      border-radius: 8px;

      &:hover {
        -webkit-box-shadow: 0px 4px 4px rgba(68, 44, 102, 0.24);
        -moz-box-shadow: 0px 4px 4px rgba(68, 44, 102, 0.24);
        box-shadow: 0px 4px 4px rgba(68, 44, 102, 0.24);
      }
    }
  }

  .user-info-input {
    border: 1px solid #d5dce0;

    &:hover{
      padding: 5px;
      border-color: rgba(235, 20, 120, 0.66);
    }

    &:focus {
      padding: 5px;
      border-color: #eb1478;
    }
  }
}

@media only screen and (max-width: 480px) {
  .set-user-info {
    .modal-body {
      .avatar-wrapper {
        flex-direction: column;
        align-items: center;

        .avatar {
          margin-botto: 20px;
        }
      }
    }
  }
}

